--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -68,4 +68,4 @@ jobs:
         with:
           context: .
           push: true
-          tags: blackandromeda/fin-manager:${{ env.TAG }}, blackandromeda/fin-manager:latest
+          tags: blackandromeda/fin-manager:${{ env.TAG }}
